--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 title: "Warpspire: Web, Design &amp; Code Geekery"
+head_content:
+  <link rel="alternate" type="application/atom+xml" href="http://warpspire.com/feed/" />
 ---
 
 <div class="listing">
