--- a/experiments/history-api/index.html
+++ b/experiments/history-api/index.html
@@ -5,7 +5,10 @@
   <title>History API — Warpspire Experiments</title>
   <link rel="stylesheet" type="text/css" href="../css/base.css" />
   <link rel="stylesheet" type="text/css" href="css/history_api.css" />
-  <script src="js/scripts.js" type="text/javascript" charset="utf-8"></script>
+  <script src="../javascripts/lib/jquery-1.5.1.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="javascripts/lib/handlebars.js" type="text/javascript" charset="utf-8"></script>
+  <script src="javascripts/app/twitter_timeline.js" type="text/javascript" charset="utf-8"></script>
+  <script src="javascripts/application.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
   <div id="experiments-header">
@@ -29,6 +32,19 @@
         scroll. Fluid user experience and hard linking all in one. Try scrolling down,
         clicking a tweet, then press the back button.
       </p>
+
+
+      <script id="tweet-template" type="text/x-handlebars-template">
+        <div class="tweet">
+          <h4 class="author"><a href="#" class="handle">@{{handle}}</a> <a href="#" class="name">{{name}}</a></h4>
+          <p>{{body}}</p>
+          <p class="meta"><a href="#" class="timestamp">{{timestamp}}</a></p>
+        </div>
+      </script>
+
+      <div id="tweets" class="js-tweets" data-url="https://api.twitter.com/1/statuses/user_timeline.json?screen_name=WWDCGlobalPR">
+      </div><!-- /.tweets -->
+
     </div><!-- /.column.main -->
   </div><!-- /#content -->
 </body>
