Tweak the scrolling behavior through refreshes

--- a/experiments/history-api/index.html
+++ b/experiments/history-api/index.html
@@ -44,7 +44,7 @@
         </div>
       </script>
 
-      <div id="tweets" class="js-tweets tweets" data-url="http://api.twitter.com/1/statuses/user_timeline.json?screen_name=github">
+      <div id="tweets" class="js-tweets tweets" data-url="http://api.twitter.com/1/statuses/user_timeline.json?screen_name=holman">
       </div><!-- /.tweets -->
 
     </div><!-- /.column.main -->
