--- a/experiments/history-api/index.html
+++ b/experiments/history-api/index.html
@@ -32,8 +32,8 @@
       <h1>Infinite Scroll + HTML5 History API</h1>
       <p>
         This example shows the power of the History API when combined with infinite
-        scroll. Fluid user experience and hard linking all in one. Try scrolling down,
-        clicking a tweet, then press the back button.
+        scroll. Fluid user experience and hard linking all in one. Scroll down, click
+        a link &amp; press the back button, refresh the page — it all just works.
       </p>
 
       <script id="tweet-template" type="text/x-handlebars-template">
