--- a/experiments/history-api/index.html
+++ b/experiments/history-api/index.html
@@ -16,16 +16,16 @@
 <body>
   <div id="experiments-header">
     <div class="inner">
-      <h2 class="logo"><a href="http://experiments.warpspire.com">Warpspire Experiments</a></h2>
+      <h2 class="logo"><a href="/experiments/">Warpspire Experiments</a></h2>
       <p class="back">In relation to <a href="#">Responsive web design from the future</a></p>
     </div>
   </div><!-- /#experiments-header -->
 
   <div id="content" class="columns typical">
     <ul class="column navigation">
-      <li><a href="#" class="overview-style selected">Overview</a></li>
-      <li><a href="#" class="explanation-style">Explanation</a></li>
-      <li><a href="#" class="code-style">See the Code</a></li>
+      <li><a href="/experiments/history-api/" class="overview-style selected">Overview</a></li>
+      <li><a href="/experiments/history-api/explanation" class="explanation-style">Explanation</a></li>
+      <li><a href="/experiments/history-api/code" class="code-style">See the Code</a></li>
     </ul><!-- /.column.navigation -->
 
     <div class="column main">
