--- a/experiments/history-api/explanation.html
+++ b/experiments/history-api/explanation.html
@@ -27,11 +27,11 @@
         I built this example to serve a few purposes.  First, I wanted to show
         off the <strong>power of the HTML5 History API</strong>.  By using
         <code>replaceState</code> — I'm able to change the full URL as you
-        scroll. Additionally, since <code>replaceState</code> doesn't add to
-        the back button stack, the back/forward buttons work as expected.
+        scroll. Since <code>replaceState</code> doesn't add to the back button
+        stack, the back/forward buttons work as expected.
       </p>
       <p>
-        Secondly, I wanted to show how <strong>infinite scrolling can be awesome</strong>.
+        I also wanted to show how <strong>infinite scrolling can be awesome</strong>.
         Page numbers don’t make sense in infinite scrolling — but incremental updates do.
         That's why this example uses <code>max_id</code> to mark your position
         and not a page number.
@@ -43,6 +43,11 @@
         share the URL with other people, they see the same thing they've seen.
         They can also close their browser, re-open it on the same page, refresh
         the page, or arrive via the back/forward buttons and see the same content.
+      </p>
+
+      <p>
+        But really, it's all pretty boring. Why? Because it works like you'd
+        expect the web to work. Which is how things should be.
       </p>
 
     </div><!-- /.column.main -->
