--- a/experiments/history-api/code.html
+++ b/experiments/history-api/code.html
@@ -26,7 +26,8 @@
       <p>
         You can see the full code for this example <a href="https://github.com/kneath/kneath.github.com/tree/master/experiments/history-api">on
         the GitHub repo for this blog</a>. Most of the code is supporting Javascript —
-        I'm using jQuery to do DOM Manipulation, JSONP (via <a href="http://api.jquery.com/jQuery.getJSON/">$.getJSON</a>) to retreive the tweets from
+        I'm using <a href="http://jashkenas.github.com/coffee-script/">CoffeeScript</a> for the app code,
+        jQuery to do DOM Manipulation, JSONP (via <a href="http://api.jquery.com/jQuery.getJSON/">$.getJSON</a>) to retreive the tweets from
         <a href="http://dev.twitter.com/doc/get/statuses/user_timeline">Twitter's API</a>,
         <a href="http://handlebars.strobeapp.com/">handlebars.js</a> to format the tweets, and
         <a href="https://github.com/twitter/twitter-text-js">twiter_text.js</a> to
