This is who should be using it

--- a/experiments/history-api/explanation.html
+++ b/experiments/history-api/explanation.html
@@ -47,7 +47,8 @@
 
       <p>
         But really, it's all pretty boring. Why? Because it works like you'd
-        expect the web to work. Which is how things should be.
+        expect the web to work. Which is how things should be. And it's how
+        I wish infinite scrolling sites like Facebook, Twitter and Tumblr acted.
       </p>
 
     </div><!-- /.column.main -->
