--- a/experiments/history-api/explanation.html
+++ b/experiments/history-api/explanation.html
@@ -41,7 +41,7 @@
         off the <strong>power of the HTML5 History API</strong>.  By using
         <code>replaceState</code> — I'm able to change the full URL as you
         scroll. Since <code>replaceState</code> doesn't add to the back button
-        stack, the back/forward buttons work as expected.
+        stack, the back/forward buttons still work as expected.
       </p>
       <p>
         I also wanted to show how <strong>infinite scrolling can be awesome</strong>.
@@ -51,11 +51,9 @@
       </p>
       <p>
         What this adds up to is a <strong>utopian paging example</strong>
-        Users never have to click "more", "next page", "previous page" or any
-        buttons — new content just streams in as they'd expect. But when they
-        share the URL with other people, they see the same thing they've seen.
-        They can also close their browser, re-open it on the same page, refresh
-        the page, or arrive via the back/forward buttons and see the same content.
+        Users never have to click paging links — new content magically streams in.
+        But if you share the URL in your address bar with a friend over chat, they'll
+        see the same thing you see.
       </p>
 
       <p>
