--- a/experiments/history-api/explanation.html
+++ b/experiments/history-api/explanation.html
@@ -50,7 +50,7 @@
         and not a page number.
       </p>
       <p>
-        What this adds up to is a <strong>utopian paging example</strong>
+        This adds up to my version of a <strong>utopian paging example</strong>.
         Users never have to click paging links — new content magically streams in.
         But if you share the URL in your address bar with a friend over chat, they'll
         see the same thing you see.
