Still needs a bit of polish probably

--- a/experiments/history-api/index.html
+++ b/experiments/history-api/index.html
@@ -46,7 +46,8 @@
       <p>
         This example shows the power of the History API when combined with infinite
         scroll. Fluid user experience and hard linking all in one. Scroll down, click
-        a link &amp; press the back button, refresh the page — it all just works.
+        a link &amp; press the back button, refresh the page — it all just works (well,
+        mostly — still needs some polish).
       </p>
 
       <script id="tweet-template" type="text/x-handlebars-template">
