--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@ head_content:
   <link rel="alternate" type="application/atom+xml" href="http://warpspire.com/feed/" />
 ---
 
+<p class="intro">
+  My name is Kyle Neath and I work at <a href="https://github.com">GitHub</a> in San Francisco. I love to build beautiful things with software and these are my words on design &amp; code.
+</p>
+
 <div class="listing">
 {% for post in site.posts %}
   {% if post.type == 'link' %}
