A new direction for Warpspire

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ head_content:
 ---
 
 <p class="intro">
-  My name is Kyle Neath and I work at <a href="https://github.com">GitHub</a> in San Francisco. I love to build beautiful things with software and these are my words on design &amp; code.
+  Welcome! Warpspire is a collection of links, reviews, and opinions focused on product design and its effects on our world published by Kyle Neath.
 </p>
 
 <hr />
