--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ head_content:
 ---
 
 <p class="intro">
-  Welcome! Warpspire is a collection of links, reviews, and opinions focused on product design and its effects on our world published by Kyle Neath.
+  Welcome! Warpspire is a collection of links, reviews, and opinions focused on product design and its effects on our world. Published by Kyle Neath.
 </p>
 
 <hr />
