--- a/opinion/index.html
+++ b/opinion/index.html
@@ -3,7 +3,7 @@ layout: default
 title: "Opinion"
 ---
 
-<p class="intro">Opinions on technology focused software and it&rsquo;s effect on our world.</p>
+<p class="intro">Opinions on technology focused products and it&rsquo;s effect on our world.</p>
 
 <div class="listing">
 {% for post in site.categories['opinion'] %}
