--- a/experiments/history-api/index.html
+++ b/experiments/history-api/index.html
@@ -43,6 +43,7 @@
 
     <div class="column main">
       <h1>Infinite Scroll + HTML5 History API</h1>
+      <p><strong>Note: This is broken right now, as I need to update it to use the new Twitter APIs. Yay security!</strong></p>
       <p>
         This example shows the power of the History API when combined with infinite
         scroll. Fluid user experience and hard linking all in one. Scroll down, click
