--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ head_content:
 ---
 
 <p class="intro">
-  Hi! I'm Kyle, and I use Warpspire to collect my thoughts about product design &amp; development.
+  Hi! <a href="/about">I'm Kyle</a>, and I use Warpspire to collect my thoughts about product design &amp; development.
 </p>
 
 <hr />
