All the old goes into proxima quarantine

--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 	    Warpspire: Web, Design &amp; Code Geekery
 
 	</title>
-	<link rel="stylesheet" href="/css/base.css" type="text/css" />
+	<link rel="stylesheet" href="/css/proxima.css" type="text/css" />
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 	<link rel="alternate" type="application/atom+xml" href="http://warpspire.com/feed/" />
 	<script type="text/javascript">
