--- a/experiments/history-api/code.html
+++ b/experiments/history-api/code.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>History API / Code — Warpspire Experiments</title>
-  <link rel="stylesheet" type="text/css" href="../css/base.css" />
+  <link rel="stylesheet" type="text/css" href="../css/proxima.css" />
   <link rel="stylesheet" type="text/css" href="css/history_api.css" />
   <script type="text/javascript">
 
