--- a/experiments/history-api/index.html
+++ b/experiments/history-api/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>History API — Warpspire Experiments</title>
-  <link rel="stylesheet" type="text/css" href="../css/base.css" />
+  <link rel="stylesheet" type="text/css" href="../css/proxima.css" />
   <link rel="stylesheet" type="text/css" href="css/history_api.css" />
   <script src="../javascripts/lib/jquery-1.5.1.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="javascripts/lib/handlebars.js" type="text/javascript" charset="utf-8"></script>
