--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: proxima/default
 head_content:
   <link rel="alternate" type="application/atom+xml" href="http://warpspire.com/feed/" />
 ---
