--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ layout: phasetwo/default
   </div>
 
   <div class="charity">
-    <h2>Non-Profits I support</h2>
+    <h2>Non-Profits</h2>
 
     <ul class="nonprofits">
       <li>
@@ -132,5 +132,13 @@ layout: phasetwo/default
         <p>Common Good, Evidence-Based.</p>
       </li>
     </ul>
+  </div>
+
+  <div class="profit">
+    <h2>For Profit</h2>
+    <p>I do a little bit of angel investing.</p>
+    <p>Regenerative Food Production. Tahoe Businesses. Carbon Removal. Are you starting a company focused on any of these topics?</p>
+    <p>Email me at <a href="mailto:kyle@warpspire.com">kyle@warpspire.com</a>.</p>
+    <p>Advance warning: I am a terrible correspondent. I'm sorry.</p>
   </div>
 </div>
