Not pollen season quite yet

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: phasetwo/default
       </li>
       <li>
         <h3>A Place of My Own</h3>
-        <p class="author">Michael Pollen</p>
+        <p class="author">Michael Pollan</p>
       </li>
     </ul>
   </div>
