The Climate Gap

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@ layout: phasetwo/default
     <p>Ten books off the top of my head that have changed my mind, advanced my worldview, or otherwise are worth reading.</p>
     <ul class="books">
       <li>
+        <h3>After Geoengineering: Climate Tragedy, Repair, and Restoration</h3>
+        <p class="author">Holly Jean Buck</p>
+      </li>
+      <li>
         <h3>One-Straw Revolution</h3>
         <p class="author">Masanobu Fukuoka</p>
       </li>
@@ -29,10 +33,6 @@ layout: phasetwo/default
       <li>
         <h3>Quiet: The Power of Introverts in a World That Can't Stop Talking</h3>
         <p class="author">Susan Cain</p>
-      </li>
-      <li>
-        <h3>Sepp Holzer's Permaculture</h3>
-        <p class="author">Sepp Holzer</p>
       </li>
       <li>
         <h3>1491: New Revelations of the Americas Before Columbus</h3>
