--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: phasetwo/default
 
 <div class="homepage">
   <h2>It's me. Kyle <strike>Neath</strike> Aster.</h2>
-  <p>A long time ago, I used to build internet. Now I don't. But I do like to write, and this is my blog. If you're curious, you can read more <a href="/about">about me</a> or what <a href="/now">what I'm doing now</a>.</p>
+  <p>A long time ago, I used to build internet. Now I don't. But I do like to write, and this is my blog. If you're curious, you can read more <a href="/about">about</a> me, who I <a href="/giving">give</a> money to, or what I'm doing <a href="/now">now</a>.</p>
   
   <div class="latest">
     <p class="date">{{ site.posts.first.date | date: "%B %e, %Y" }}</p>
@@ -12,8 +12,6 @@ layout: phasetwo/default
     <p>{{ site.posts.first.summary }}</p>
     <p><a href="{{ site.posts.first.url }}" class="continue">Continue Reading</a></p>
   </div>
-  
-  
   
   <div class="mini-archive">
     <h2>Previously</h2>
@@ -66,83 +64,6 @@ layout: phasetwo/default
       <li>
         <h3>A Place of My Own</h3>
         <p class="author">Michael Pollan</p>
-      </li>
-    </ul>
-  </div>
-
-  <div class="charity">
-    <h2>Non-Profits I Like</h2>
-
-    <ul class="nonprofits">
-      <li>
-        <h3><a href="https://trees.org">Trees for the Future</a></h3>
-        <p>Carbon Focused, Natural Solution.</p>
-      </li>
-      <li>
-        <h3><a href="https://sugarpinefoundation.org/">Sugar Pine Foundation</a></h3>
-        <p>Carbon Focused, Natural Solution. Local.</p>
-      </li>
-      <li>
-        <h3><a href="https://www.coolearth.org/">Cool Earth Action</a></h3>
-        <p>Carbon Focused, Natural Solution.</p>
-      </li>
-      <li>
-        <h3><a href="https://protectourwinters.org/">Protect Our Winters</a></h3>
-        <p>Carbon Focused, Advocacy.</p>
-      </li>
-      <li>
-        <h3><a href="https://www.sierraclub.org/">Sierra Club</a></h3>
-        <p>Carbon Focused, Advocacy.</p>
-      </li>
-      <li>
-        <h3><a href="https://drawdown.org/">Drawdown</a></h3>
-        <p>Carbon Focused, Advocacy.</p>
-      </li>
-      <li>
-        <h3><a href="https://carbon180.org/">Carbon 180</a></h3>
-        <p>Carbon Focused, Artificial Sequestration.</p>
-      </li>
-      <li>
-        <h3><a href="https://theoceancleanup.com/">The Ocean Cleanup</a></h3>
-        <p>Pollution Focused, Cleanup.</p>
-      </li>
-
-      <li>
-        <h3><a href="https://www.keeptahoeblue.org/">The League to Save Lake Tahoe</a> (Keep Tahoe Blue)</h3>
-        <p>Pollution Focused, Research, Cleanup, Advocacy. Local.</p>
-      </li>
-      <li>
-        <h3><a href="https://tahoehomeless.org/">Tahoe Coalition for the Homeless</a></h3>
-        <p>Social Well-Being. Local.</p>
-      </li>
-      <li>
-        <h3><a href="https://liveviolencefree.org/">Live Violence Free</a></h3>
-        <p>Social Well-Being. Local.</p>
-      </li>
-      <li>
-        <h3><a href="https://tamba.org/">Tahoe Area Mountain Bike Association</a> (TAMBA)</h3>
-        <p>Public Lands. Local.</p>
-      </li>
-      <li>
-        <h3><a href="https://mountshastatrailassociation.org/">Mt. Shasta Trail Association</a></h3>
-        <p>Public Lands. Local.</p>
-      </li>
-      <li>
-        <h3><a href="https://www.sierraavalanchecenter.org/">Sierra Avalanche Center</a></h3>
-        <p>Public Lands. Local.</p>
-      </li>
-      <li>
-        <h3><a href="https://tahoerimtrail.org/">Tahoe Rim Trail Association</a></h3>
-        <p>Public Lands. Local.</p>
-      </li>
-
-      <li>
-        <h3><a href="https://www.givedirectly.org/">GiveDirectly</a></h3>
-        <p>Common Good, Poverty.</p>
-      </li>
-      <li>
-        <h3><a href="https://www.givewell.org/">GiveWell</a></h3>
-        <p>Common Good, Evidence-Based.</p>
       </li>
     </ul>
   </div>
