--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: phasetwo/default
 
 <div class="homepage">
   <h2>It's me. Kyle <strike>Neath</strike> Aster.</h2>
-  <p>A long time ago, I used to build internet. Now I don't. But I do like to write, and this is my blog. If you're curious, you can read more <a href="/about">about</a> me, who I <a href="/giving">give</a> money to, or what I'm doing <a href="/now">now</a>.</p>
+  <p>A long time ago, I used to build internet. Now I don't. But I do like to write, and this is my blog. In addition to the blog posts below, I've written <a href="/about">about me</a>, who I <a href="/giving">give money to</a>, and <a href="/now">what I'm doing now</a>. You can even still get to the <a href="/proxima">older version of this site</a> if you so wish.</p>
   
   <div class="latest">
     <p class="date">{{ site.posts.first.date | date: "%B %e, %Y" }}</p>
