Update the intro a bit

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: phasetwo/default
 
 <div class="homepage">
   <h2>It's me. Kyle <strike>Neath</strike> Aster.</h2>
-  <p>A long time ago, I used to build internet. Now I don't. But I do like to write, and this is my blog. In addition to the blog posts below, I've written <a href="/about">about me</a>, who I <a href="/giving">give money to</a>, and <a href="/now">what I'm doing now</a>. You can even still get to the <a href="/proxima">older version of this site</a> if you so wish.</p>
+  <p>A long time ago, I used to build internet. Now I don't. But I do like to write! In addition to the blog posts below, you can read <a href="/about">about me</a>, <a href="/now">what I'm doing now</a>, and <a href="/giving">who I give to</a>. If you're feeling nostalgic, you can also browse the <a href="/proxima">older version of this site</a> if you so wish.</p>
   
   <div class="latest">
     <p class="date">{{ site.posts.first.date | date: "%B %e, %Y" }}</p>
