--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@ layout: phasetwo/default
 
 <div class="homepage">
   <h2>It's me. Kyle <strike>Neath</strike> Aster.</h2>
-  <p>A long time ago, I used to build internet. Now I don't. But I do like to write! In addition to the blog posts below, you can read <a href="/about">about me</a>, <a href="/now">what I'm doing now</a>, <a href="/giving">where my giving goes</a>, and how I'm <a href="/offsets">offsetting my carbon emissions</a>. If you're feeling nostalgic, you can also browse the <a href="/proxima">older version of this site</a> if you so wish.</p>
+  <p>A long time ago, I used to build internet. Now I don't.</p>
+  I don't have navigation yet, so maybe read <a href="/about">about me</a>, <a href="/now">what I'm doing now</a>, <a href="/giving">where my giving goes</a>, and how I <a href="/offset">offset my carbon emissions</a>. If you're feeling nostalgic, you can even browse the <a href="/proxima">older version of this site</a>.</p>
   
   <div class="latest">
     <p class="date">{{ site.posts.first.date | date: "%B %e, %Y" }}</p>
